feat: 添加七牛云文件储存

--- a/apps/web-app/src/assets/css/index.scss
+++ b/apps/web-app/src/assets/css/index.scss
@@ -8,6 +8,11 @@
   --contaimer-shadow: 0 0 3px #e5e5e5;
 }
 
+.pc-container{
+  max-width: 1300px;
+  width: 100%;
+  margin: auto;
+}
 
 @import './common.scss';
 @import './flex.scss';
